--- a/style.css
+++ b/style.css
@@ -35,9 +35,14 @@ body{
   display:flex;
   justify-content:space-between;
   padding:16px 28px;
-  background:rgba(15,23,42,0.8);
+  background:rgba(255,255,255,0.75);
   backdrop-filter:blur(16px);
 }
+
+body.dark .navbar{
+  background:rgba(15,23,42,0.8);
+}
+
 
 .logo{
   font-family:'Space Grotesk',sans-serif;
@@ -83,9 +88,14 @@ body{
   padding:16px 22px 16px 50px;
   border-radius:999px;
   border:none;
-  background:#020617;
-  color:#fff;
+  background: var(--bg);
+  color: var(--text);
 }
+
+body.dark .search-wrapper input{
+  background:#020617;
+}
+
 
 .search-icon{
   position:absolute;
